--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
-* {
-    color: brown;
+.main_heading {
+    color: blueviolet;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    font-size: 48px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    line-height: 1.2;
+    margin-bottom: 20px;
+    background: linear-gradient(45deg, rgb(145, 231, 198), rgb(221, 136, 200));
+    
+
 }
