--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,11 @@
     animation: pulse 2s infinite;
 }
 
+.lasagna_div, .chicken_div, .pancake_div  {
+    padding: 25px;
+}
+
+
 .sub_list {
     color: rgb(248, 248, 248);
 }
